# graphics

./: .gitignore  CMakeLists.txt  README.md
homework0/: CMakeLists.txt  example.cpp  main.cpp
homework1/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework2/: CMakeLists.txt  Triangle.cpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework3/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp
